ImgViewer: Prevent dragging out of screen

--- a/index.css
+++ b/index.css
@@ -1598,8 +1598,10 @@ body:not(.fullscreen) #lowerPanel.animating:not(.lowerPanelUp) {
     background-color: rgba(0, 0, 0, 0.5);
     cursor: grab;
     user-select: none;
-    animation-name: showImgView;
-    animation-duration: 0.3s;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    animation: fadein 0.3s;
 }
 
 @keyframes showImgView {
@@ -1615,13 +1617,14 @@ body:not(.fullscreen) #lowerPanel.animating:not(.lowerPanelUp) {
 }
 
 #imgViewerBox #imgViewer {
-    width: 100%;
-    height: 100%;
+    /* width: 100%;
+    height: 100%; */
     max-width: 100%;
     max-height: 100%;
     object-fit: contain;
     /*pointer-events: none;*/
     transition: transform 0.2s;
+    animation: showImgView 0.3s;
 }
 
 .popupContainer {
